crates/pg_syntax/tests/snapshots/postgres_regress/gin@58.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into t_gin_test_tbl\nvalues\n  (null,    null),\n  ('{}',    null),\n  ('{1}',   '{2,3}');"
---
InsertStmt@0..93
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "t_gin_test_tbl"
  Newline@26..27 "\n"
  SelectStmt@27..91
    Values@27..33 "values"
    Newline@33..34 "\n"
    Whitespace@34..36 "  "
    Ascii40@36..37 "("
    List@37..50
      AConst@37..41
        NullP@37..41 "null"
      Ascii44@41..42 ","
      Whitespace@42..46 "    "
      AConst@46..50
        NullP@46..50 "null"
    Ascii41@50..51 ")"
    Ascii44@51..52 ","
    Newline@52..53 "\n"
    Whitespace@53..55 "  "
    Ascii40@55..56 "("
    List@56..69
      AConst@56..60
        Sconst@56..60 "'{}'"
      Ascii44@60..61 ","
      Whitespace@61..65 "    "
      AConst@65..69
        NullP@65..69 "null"
    Ascii41@69..70 ")"
    Ascii44@70..71 ","
    Newline@71..72 "\n"
    Whitespace@72..74 "  "
    Ascii40@74..75 "("
    List@75..91
      AConst@75..80
        Sconst@75..80 "'{1}'"
      Ascii44@80..81 ","
      Whitespace@81..84 "   "
      AConst@84..91
        Sconst@84..91 "'{2,3}'"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

