crates/pg_syntax/tests/snapshots/postgres_regress/gist@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into gist_point_tbl (id, p)\nselect g+100000, point(g*10+1, g*10+1) from generate_series(1, 10000) g;"
---
InsertStmt@0..107
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "gist_point_tbl"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  ResTarget@28..30
    Ident@28..30 "id"
  Ascii44@30..31 ","
  Whitespace@31..32 " "
  ResTarget@32..33
    Ident@32..33 "p"
  Ascii41@33..34 ")"
  Newline@34..35 "\n"
  SelectStmt@35..106
    Select@35..41 "select"
    Whitespace@41..42 " "
    ResTarget@42..50
      AExpr@42..50
        ColumnRef@42..43
          Ident@42..43 "g"
        Ascii43@43..44 "+"
        AConst@44..50
          Iconst@44..50 "100000"
    Ascii44@50..51 ","
    Whitespace@51..52 " "
    ResTarget@52..72
      FuncCall@52..72
        Ident@52..57 "point"
        Ascii40@57..58 "("
        AExpr@58..64
          AExpr@58..62
            ColumnRef@58..59
              Ident@58..59 "g"
            Ascii42@59..60 "*"
            AConst@60..62
              Iconst@60..62 "10"
          Ascii43@62..63 "+"
          AConst@63..64
            Iconst@63..64 "1"
        Ascii44@64..65 ","
        Whitespace@65..66 " "
        AExpr@66..72
          AExpr@66..70
            ColumnRef@66..67
              Ident@66..67 "g"
            Ascii42@67..68 "*"
            AConst@68..70
              Iconst@68..70 "10"
          Ascii43@70..71 "+"
          AConst@71..72
            Iconst@71..72 "1"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    From@74..78 "from"
    Whitespace@78..79 " "
    RangeFunction@79..106
      List@79..103
        FuncCall@79..103
          Ident@79..94 "generate_series"
          Ascii40@94..95 "("
          AConst@95..96
            Iconst@95..96 "1"
          Ascii44@96..97 ","
          Whitespace@97..98 " "
          AConst@98..103
            Iconst@98..103 "10000"
      Ascii41@103..104 ")"
      Whitespace@104..105 " "
      Alias@105..106
        Ident@105..106 "g"
  Ascii59@106..107 ";"

