crates/pg_syntax/tests/snapshots/postgres_regress/gist@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into gist_tbl\nselect box(point(0.05*i, 0.05*i), point(0.05*i, 0.05*i)),\n       point(0.05*i, 0.05*i),\n       circle(point(0.05*i, 0.05*i), 1.0)\nfrom generate_series(0,10000) as i;"
---
InsertStmt@0..186
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "gist_tbl"
  Newline@20..21 "\n"
  SelectStmt@21..185
    Select@21..27 "select"
    Whitespace@27..28 " "
    ResTarget@28..75
      FuncCall@28..75
        Ident@28..31 "box"
        Ascii40@31..32 "("
        FuncCall@32..52
          Ident@32..37 "point"
          Ascii40@37..38 "("
          AExpr@38..44
            AConst@38..42
              Fconst@38..42 "0.05"
            Ascii42@42..43 "*"
            ColumnRef@43..44
              Ident@43..44 "i"
          Ascii44@44..45 ","
          Whitespace@45..46 " "
          AExpr@46..52
            AConst@46..50
              Fconst@46..50 "0.05"
            Ascii42@50..51 "*"
            ColumnRef@51..52
              Ident@51..52 "i"
        Ascii41@52..53 ")"
        Ascii44@53..54 ","
        Whitespace@54..55 " "
        FuncCall@55..75
          Ident@55..60 "point"
          Ascii40@60..61 "("
          AExpr@61..67
            AConst@61..65
              Fconst@61..65 "0.05"
            Ascii42@65..66 "*"
            ColumnRef@66..67
              Ident@66..67 "i"
          Ascii44@67..68 ","
          Whitespace@68..69 " "
          AExpr@69..75
            AConst@69..73
              Fconst@69..73 "0.05"
            Ascii42@73..74 "*"
            ColumnRef@74..75
              Ident@74..75 "i"
    Ascii41@75..76 ")"
    Ascii41@76..77 ")"
    Ascii44@77..78 ","
    Newline@78..79 "\n"
    Whitespace@79..86 "       "
    ResTarget@86..106
      FuncCall@86..106
        Ident@86..91 "point"
        Ascii40@91..92 "("
        AExpr@92..98
          AConst@92..96
            Fconst@92..96 "0.05"
          Ascii42@96..97 "*"
          ColumnRef@97..98
            Ident@97..98 "i"
        Ascii44@98..99 ","
        Whitespace@99..100 " "
        AExpr@100..106
          AConst@100..104
            Fconst@100..104 "0.05"
          Ascii42@104..105 "*"
          ColumnRef@105..106
            Ident@105..106 "i"
    Ascii41@106..107 ")"
    Ascii44@107..108 ","
    Newline@108..109 "\n"
    Whitespace@109..116 "       "
    ResTarget@116..149
      FuncCall@116..149
        Ident@116..122 "circle"
        Ascii40@122..123 "("
        FuncCall@123..143
          Ident@123..128 "point"
          Ascii40@128..129 "("
          AExpr@129..135
            AConst@129..133
              Fconst@129..133 "0.05"
            Ascii42@133..134 "*"
            ColumnRef@134..135
              Ident@134..135 "i"
          Ascii44@135..136 ","
          Whitespace@136..137 " "
          AExpr@137..143
            AConst@137..141
              Fconst@137..141 "0.05"
            Ascii42@141..142 "*"
            ColumnRef@142..143
              Ident@142..143 "i"
        Ascii41@143..144 ")"
        Ascii44@144..145 ","
        Whitespace@145..146 " "
        AConst@146..149
          Fconst@146..149 "1.0"
    Ascii41@149..150 ")"
    Newline@150..151 "\n"
    From@151..155 "from"
    Whitespace@155..156 " "
    RangeFunction@156..185
      List@156..179
        FuncCall@156..179
          Ident@156..171 "generate_series"
          Ascii40@171..172 "("
          AConst@172..173
            Iconst@172..173 "0"
          Ascii44@173..174 ","
          AConst@174..179
            Iconst@174..179 "10000"
      Ascii41@179..180 ")"
      Whitespace@180..181 " "
      Alias@181..185
        As@181..183 "as"
        Whitespace@183..184 " "
        Ident@184..185 "i"
  Ascii59@185..186 ";"

