crates/pg_syntax/tests/snapshots/postgres_regress/gist@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select p from gist_tbl where p <@ box(point(0,0), point(0.5, 0.5))\norder by p <-> point(0.201, 0.201);"
---
SelectStmt@0..102
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "p"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "gist_tbl"
  Whitespace@22..23 " "
  Where@23..28 "where"
  Whitespace@28..29 " "
  AExpr@29..64
    ColumnRef@29..30
      Ident@29..30 "p"
    Whitespace@30..31 " "
    Op@31..33 "<@"
    Whitespace@33..34 " "
    FuncCall@34..64
      Ident@34..37 "box"
      Ascii40@37..38 "("
      FuncCall@38..47
        Ident@38..43 "point"
        Ascii40@43..44 "("
        AConst@44..45
          Iconst@44..45 "0"
        Ascii44@45..46 ","
        AConst@46..47
          Iconst@46..47 "0"
      Ascii41@47..48 ")"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      FuncCall@50..64
        Ident@50..55 "point"
        Ascii40@55..56 "("
        AConst@56..59
          Fconst@56..59 "0.5"
        Ascii44@59..60 ","
        Whitespace@60..61 " "
        AConst@61..64
          Fconst@61..64 "0.5"
  Ascii41@64..65 ")"
  Ascii41@65..66 ")"
  Newline@66..67 "\n"
  SortBy@67..100
    Order@67..72 "order"
    Whitespace@72..73 " "
    By@73..75 "by"
    Whitespace@75..76 " "
    AExpr@76..100
      ColumnRef@76..77
        Ident@76..77 "p"
      Whitespace@77..78 " "
      Op@78..81 "<->"
      Whitespace@81..82 " "
      FuncCall@82..100
        Ident@82..87 "point"
        Ascii40@87..88 "("
        AConst@88..93
          Fconst@88..93 "0.201"
        Ascii44@93..94 ","
        Whitespace@94..95 " "
        AConst@95..100
          Fconst@95..100 "0.201"
  Ascii41@100..101 ")"
  Ascii59@101..102 ";"

