crates/pg_syntax/tests/snapshots/postgres_regress/gist@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select p from gist_tbl where p <@ box(point(0,0), point(0.5, 0.5))\norder by point(0.101, 0.101) <-> p;"
---
SelectStmt@0..102
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "p"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "gist_tbl"
  Whitespace@22..23 " "
  Where@23..28 "where"
  Whitespace@28..29 " "
  AExpr@29..64
    ColumnRef@29..30
      Ident@29..30 "p"
    Whitespace@30..31 " "
    Op@31..33 "<@"
    Whitespace@33..34 " "
    FuncCall@34..64
      Ident@34..37 "box"
      Ascii40@37..38 "("
      FuncCall@38..47
        Ident@38..43 "point"
        Ascii40@43..44 "("
        AConst@44..45
          Iconst@44..45 "0"
        Ascii44@45..46 ","
        AConst@46..47
          Iconst@46..47 "0"
      Ascii41@47..48 ")"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      FuncCall@50..64
        Ident@50..55 "point"
        Ascii40@55..56 "("
        AConst@56..59
          Fconst@56..59 "0.5"
        Ascii44@59..60 ","
        Whitespace@60..61 " "
        AConst@61..64
          Fconst@61..64 "0.5"
  Ascii41@64..65 ")"
  Ascii41@65..66 ")"
  Newline@66..67 "\n"
  SortBy@67..101
    Order@67..72 "order"
    Whitespace@72..73 " "
    By@73..75 "by"
    Whitespace@75..76 " "
    AExpr@76..101
      FuncCall@76..94
        Ident@76..81 "point"
        Ascii40@81..82 "("
        AConst@82..87
          Fconst@82..87 "0.101"
        Ascii44@87..88 ","
        Whitespace@88..89 " "
        AConst@89..94
          Fconst@89..94 "0.101"
      Ascii41@94..95 ")"
      Whitespace@95..96 " "
      Op@96..99 "<->"
      Whitespace@99..100 " "
      ColumnRef@100..101
        Ident@100..101 "p"
  Ascii59@101..102 ";"

