crates/pg_syntax/tests/snapshots/postgres_regress/gist@47.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select circle(p,1) from gist_tbl\nwhere p <@ box(point(5, 5), point(5.3, 5.3));"
---
SelectStmt@0..78
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..17
    FuncCall@7..17
      Ident@7..13 "circle"
      Ascii40@13..14 "("
      ColumnRef@14..15
        Ident@14..15 "p"
      Ascii44@15..16 ","
      AConst@16..17
        Iconst@16..17 "1"
  Ascii41@17..18 ")"
  Whitespace@18..19 " "
  From@19..23 "from"
  Whitespace@23..24 " "
  RangeVar@24..32
    Ident@24..32 "gist_tbl"
  Newline@32..33 "\n"
  Where@33..38 "where"
  Whitespace@38..39 " "
  AExpr@39..75
    ColumnRef@39..40
      Ident@39..40 "p"
    Whitespace@40..41 " "
    Op@41..43 "<@"
    Whitespace@43..44 " "
    FuncCall@44..75
      Ident@44..47 "box"
      Ascii40@47..48 "("
      FuncCall@48..58
        Ident@48..53 "point"
        Ascii40@53..54 "("
        AConst@54..55
          Iconst@54..55 "5"
        Ascii44@55..56 ","
        Whitespace@56..57 " "
        AConst@57..58
          Iconst@57..58 "5"
      Ascii41@58..59 ")"
      Ascii44@59..60 ","
      Whitespace@60..61 " "
      FuncCall@61..75
        Ident@61..66 "point"
        Ascii40@66..67 "("
        AConst@67..70
          Fconst@67..70 "5.3"
        Ascii44@70..71 ","
        Whitespace@71..72 " "
        AConst@72..75
          Fconst@72..75 "5.3"
  Ascii41@75..76 ")"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

