crates/pg_syntax/tests/snapshots/postgres_regress/gist@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select p from gist_tbl where circle(p,1) @> circle(point(0,0),0.95);"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "p"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "gist_tbl"
  Whitespace@22..23 " "
  Where@23..28 "where"
  Whitespace@28..29 " "
  AExpr@29..66
    FuncCall@29..39
      Ident@29..35 "circle"
      Ascii40@35..36 "("
      ColumnRef@36..37
        Ident@36..37 "p"
      Ascii44@37..38 ","
      AConst@38..39
        Iconst@38..39 "1"
    Ascii41@39..40 ")"
    Whitespace@40..41 " "
    Op@41..43 "@>"
    Whitespace@43..44 " "
    FuncCall@44..66
      Ident@44..50 "circle"
      Ascii40@50..51 "("
      FuncCall@51..60
        Ident@51..56 "point"
        Ascii40@56..57 "("
        AConst@57..58
          Iconst@57..58 "0"
        Ascii44@58..59 ","
        AConst@59..60
          Iconst@59..60 "0"
      Ascii41@60..61 ")"
      Ascii44@61..62 ","
      AConst@62..66
        Fconst@62..66 "0.95"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

